--- a/Dockerfile-java
+++ b/Dockerfile-java
@@ -1,4 +1,4 @@
-FROM twiliodeved/api-snippets:mono
+FROM joliveros/api-snippets-base:mono
 
 ENV DEBIAN_FRONTEND noninteractive
 
@@ -9,6 +9,7 @@ ENV SIG d54c1d3a095b4ff2b6607d096fa80163
 
 ENV JAVA_HOME /usr/lib/jvm/java-${VERSION}-oracle
 ENV JRE_HOME ${JAVA_HOME}/jre
+ENV GRADLE_OPTS="-Dorg.gradle.daemon=true"
 
 RUN apt-get update && apt-get install ca-certificates curl unzip git vim\
         -y --no-install-recommends && \
